# elevenlabs-api-rust

./: .gitignore  Cargo.toml
src/: elevenlabs_api.rs  lib.rs
src/api/: history.rs  mod.rs  tts.rs  user.rs  voice.rs
src/model/: error.rs  history.rs  mod.rs  tts.rs  user.rs  voice.rs
