[package]
name = "elevenlabs_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.152", features = ["std", "derive"] }
tokio = { version = "1", features = ["full"] }
